Fix input widths Add image Add colour

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,41 @@
+.container-fluid {
+    margin-bottom: 60px;
+}
 
+#formGroupTaskName,
+.labelName,
+#formGroupDescription,
+.labelDescription,
+.labelAssigned,
+#date,
+.control-label,
+.btn {
+    margin-left: 16px;
+}
+
+.labelName,
+.labelDescription,
+.labelAssigned,
+.control-label,
+.labelStatus {
+ 
+    font-size: medium;
+}
+
+
+.img-todo {
+    width: 350px;
+    height: 350px;
+    margin-top: 35px;
+    justify-self: center;
+}
+
+.form-control {
+    width: 90%;
+}
+
+#container-item-h2 {
+    padding-bottom: 8px;
+    margin-top: 25px;
+    
+}
