--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@
 .labelAssigned,
 #date,
 .control-label,
-.btn {
+.btn,
+#carouselExampleIndicators {
     margin-left: 16px;
 }
 
@@ -38,4 +39,34 @@
     padding-bottom: 8px;
     margin-top: 25px;
     
+}
+
+.card-img-top {
+    width: 25px;
+    height: 25%;
+    margin-left: 35px;
+    margin-top: 15px;
+}
+
+.card-text {
+    text-align: center;
+}
+
+.btn-success {
+    margin-left: 0px;
+    
+}
+
+.carousel-inner {
+    margin-bottom: 50px;
+}
+
+.card-text {
+    font-size: 20px;
+
+}
+
+.card-title {
+    font-size: 25px;
+    font-weight: bold;
 }
